--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://cdn.staticfile.org/quill/1.3.4/quill.bubble.min.css" />
 
     <script src="https://cdn.staticfile.org/vue/2.5.22/vue.min.js"></script>
+    <script src="https://unpkg.com/vuex@3.3.0/dist/vuex.js"></script>
     <script src="https://cdn.staticfile.org/vue-router/3.0.1/vue-router.min.js"></script>
     <script src="https://cdn.staticfile.org/axios/0.18.0/axios.min.js"></script>
     <script src="https://cdn.staticfile.org/lodash.js/4.17.11/lodash.min.js"></script>
